[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["mateosvilasboas <mateuscamposdantas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.4"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
sqlalchemy-utils = "^0.41.2"
aiosqlite = "^0.20.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
